// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapToClaimDtoArray should map the gql data only including fields on the picklist 1`] = `
Array [
  Object {
    "id": "a0526000009Mc2aAAC",
    "paidDate": null,
  },
  Object {
    "id": "a0526000009Mc1OAAS",
    "paidDate": null,
  },
  Object {
    "id": "a0526000009Mc2RAAS",
    "paidDate": null,
  },
  Object {
    "id": "a0526000009Mc2QAAS",
    "paidDate": null,
  },
  Object {
    "id": "a0526000009Mc2PAAS",
    "paidDate": null,
  },
]
`;

exports[`mapToClaimDtoArray should map the gql data to the correct Dtos filtering out for not New and not Claim Detail records 1`] = `
Array [
  Object {
    "id": "a0526000009Mc2aAAC",
    "isApproved": false,
    "isFinalClaim": false,
    "paidDate": null,
    "periodId": 12,
  },
  Object {
    "id": "a0526000009Mc1OAAS",
    "isApproved": true,
    "isFinalClaim": false,
    "paidDate": null,
    "periodId": 1,
  },
  Object {
    "id": "a0526000009Mc2RAAS",
    "isApproved": true,
    "isFinalClaim": false,
    "paidDate": null,
    "periodId": 3,
  },
  Object {
    "id": "a0526000009Mc2QAAS",
    "isApproved": true,
    "isFinalClaim": false,
    "paidDate": null,
    "periodId": 2,
  },
  Object {
    "id": "a0526000009Mc2PAAS",
    "isApproved": true,
    "isFinalClaim": false,
    "paidDate": null,
    "periodId": 1,
  },
]
`;

exports[`mapToClaimDtoArray should map with additional data if statusLabel or forecastCost needed 1`] = `
Array [
  Object {
    "approvedDate": null,
    "forecastCost": 400,
    "id": "a0526000009Mc2aAAC",
    "isApproved": false,
    "isFinalClaim": false,
    "lastModifiedDate": 2023-05-24T14:53:35.000Z,
    "paidDate": null,
    "partnerId": "a0D2600000zXl72EAC",
    "periodEndDate": 2024-04-30T00:00:00.000Z,
    "periodId": 12,
    "periodStartDate": 2024-04-01T00:00:00.000Z,
    "status": "Innovate Queried",
    "statusLabel": "Queried by Innovate UK",
    "totalCost": 498000,
  },
  Object {
    "approvedDate": 2023-05-16T23:00:00.000Z,
    "forecastCost": 10000,
    "id": "a0526000009Mc1OAAS",
    "isApproved": true,
    "isFinalClaim": false,
    "lastModifiedDate": 2023-05-17T15:38:39.000Z,
    "paidDate": null,
    "partnerId": "a0D2600000zXl71EAC",
    "periodEndDate": 2023-05-31T00:00:00.000Z,
    "periodId": 1,
    "periodStartDate": 2023-05-01T00:00:00.000Z,
    "status": "Approved",
    "statusLabel": "Payment being processed",
    "totalCost": 0,
  },
  Object {
    "approvedDate": 2023-05-15T23:00:00.000Z,
    "forecastCost": 300,
    "id": "a0526000009Mc2RAAS",
    "isApproved": true,
    "isFinalClaim": false,
    "lastModifiedDate": 2023-05-16T15:24:19.000Z,
    "paidDate": null,
    "partnerId": "a0D2600000zXl72EAC",
    "periodEndDate": 2023-07-31T00:00:00.000Z,
    "periodId": 3,
    "periodStartDate": 2023-07-01T00:00:00.000Z,
    "status": "Approved",
    "statusLabel": "Payment being processed",
    "totalCost": 500000,
  },
  Object {
    "approvedDate": 2023-05-15T23:00:00.000Z,
    "forecastCost": 200,
    "id": "a0526000009Mc2QAAS",
    "isApproved": true,
    "isFinalClaim": false,
    "lastModifiedDate": 2023-05-16T15:22:00.000Z,
    "paidDate": null,
    "partnerId": "a0D2600000zXl72EAC",
    "periodEndDate": 2023-06-30T00:00:00.000Z,
    "periodId": 2,
    "periodStartDate": 2023-06-01T00:00:00.000Z,
    "status": "Approved",
    "statusLabel": "Payment being processed",
    "totalCost": 1000,
  },
  Object {
    "approvedDate": 2023-05-15T23:00:00.000Z,
    "forecastCost": 100,
    "id": "a0526000009Mc2PAAS",
    "isApproved": true,
    "isFinalClaim": false,
    "lastModifiedDate": 2023-05-16T15:14:50.000Z,
    "paidDate": null,
    "partnerId": "a0D2600000zXl72EAC",
    "periodEndDate": 2023-05-31T00:00:00.000Z,
    "periodId": 1,
    "periodStartDate": 2023-05-01T00:00:00.000Z,
    "status": "Approved",
    "statusLabel": "Payment being processed",
    "totalCost": 70,
  },
]
`;
